--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   background-color: rgba(7, 104, 40);
-  background-image: linear-gradient(to  bottom, rgb(121, 124, 120, 0.8), rgb(67, 241, 134, 0.8));
-  color: #f4f7f5;
+  background-image: linear-gradient(to  bottom, rgba(169, 172, 167, 0.8), rgba(199, 246, 217, 0.8));
+  color:black;
 }
 
 .App-logo {
