--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -2,6 +2,11 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
 }
+.heading{
+    font-weight: bold;
+    font-size: 50px;
+    color: rgb(20, 21, 20);
+}
 
 @media only screen and (max-width: 700px) {
     .topics {
