--- a/src/Componets/Topics/Topics.css
+++ b/src/Componets/Topics/Topics.css
@@ -12,6 +12,13 @@ border-radius: 30%;
 }
 .topic-details{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+}
+.btn-start{
+    width: 100%;
+    border: none;
+    background-color: green;
+    border-radius: 50px;
+    padding: 15px;
 }
