--- a/src/Componets/Header/Header.css
+++ b/src/Componets/Header/Header.css
@@ -3,8 +3,10 @@
     background-color: black;
     width: 100%;
     color: green;
-    display: flex;
+    display: grid;
     align-items: center;
+   grid-template-columns: 3fr 1fr;
+    
 
 }
 .header-left{
@@ -17,4 +19,15 @@
     width: 50px;
     padding-right: 20px;
     
+}
+.stat{
+text-decoration: none;
+color: green;
+font-size: larger;
+font-weight: bold;
+padding-right: 20px;
+}
+.stat:hover{
+    color: rgb(6, 251, 6);
+    font-weight: bolder;
 }
