--- a/src/Componets/Header/Header.css
+++ b/src/Componets/Header/Header.css
@@ -31,3 +31,20 @@ padding-right: 20px;
     color: rgb(6, 251, 6);
     font-weight: bolder;
 }
+@media only screen and (max-width: 700px) {
+    .stat{
+      font-size: medium;
+    }
+    .header-left{
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+    }
+    .header-left img{
+        height: 50px;
+        width: 50px;
+        padding-right: 5px;
+        
+    }
+    
+}
