--- a/src/Componets/Topics/Topics.css
+++ b/src/Componets/Topics/Topics.css
@@ -23,3 +23,10 @@ border-radius: 30%;
     padding: 15px;
     font-weight: bold;
 }
+@media only screen and (max-width: 700px) {
+    .topic-container{
+        margin: 10px auto;
+    }
+    
+    
+}
